# TestwithCmake

./: CMakeLists.txt
Serial/: CMakeLists.txt
Serial/visual_studio/: visual_studio.VC.VC.opendb
src/: graph.h  main.cpp  motor.hpp
